# udemy-master-langchain-ollama

./: .gitignore  master-langchain-ollama.md
00-talkie-streamlit-crashcourse/: 01-text-display.py  02-streamlit-textinputs.py  03-streamlit-interactive-widgets.py  04-streamlit-status-and-progress.py  05-streamlit-working-with-data.py  pyproject.toml
00-talkie-streamlit-crashcourse/data/: auto.csv
01-Ollama-SetUp/: ollama-introduction.md
01-Ollama-SetUp/customize/: nemotron-gguf.modelfile  qwen3.6-custom.modelfile
02-Langchain-Intro/: langchain-intro.md
02-Langchain-Intro/build-chatbot/: chat_module.py  main.py  pyproject.toml
02-Langchain-Intro/langchain-start/: 02_langchain_prompt_template.py  03_langchain_chains.py  04_chain_runnables.py  05_chain_parallel.py  06_chain_router.py  07_runnable_passthrough.py  08_custom_chain_decorator.py  09_pydantic_output_parser.py  10_json_outputparser.py  11_csv_outputparser.py  12_chat_without_history.py  13_chat_with_history.py  14_chat_history_placeholder.py  chat_history.db  main.py  pyproject.toml
02-Langchain-Intro/rag-chatbot/: chat_tools.py  main.py  pdf-load.py  pyproject.toml
03-Tool-Function-Calling/: 01-custom-tools.py  pyproject.toml
04-agents-with-langchain/: agent_tools.py  langchain_agent.py  pyproject.toml
