[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "streamlit[pdf]>=1.58.0",
    "tiktoken>=0.13.0",
]
